SERVER-26461 Request text score even if no fields are needed.